# phylonium

./: .clang-format  .gitignore  .travis.yml  CITATION.cff  Makefile.am  Readme.md  configure.ac
documentation/: Makefile  eco29.names  etefmt.py  manual.tex
libs/: Makefile.am  compat-stdlib.h  pfasta.c  pfasta.h  reallocarray.c  revseqcmp.c  revseqcmp.h  revseqcmp_avx2.c  revseqcmp_ssse3.c  seqcmp.c  seqcmp.h  seqcmp_avx2.c  seqcmp_avx512.c  seqcmp_sse2.c
m4/: ax_gcc_func_attribute.m4
man/: phylonium.1.in
src/: Makefile.am  esa.cxx  esa.h  evo_model.cxx  evo_model.h  global.h  io.cxx  io.h  matrix.cxx  matrix.h  mksupergenome-process.cxx  phylonium.cxx  process.cxx  process.h  sequence.cxx  sequence.h  ugalign-process.cxx
test/: Makefile.am  Tmain.cxx  Tprocess.cxx  Tsequence.cxx  simf.cxx  simple.sh
